--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,13 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Typings files
+typings
+
+# Compiled JS files
+*.js
+*.js.map
+
+# Force systemjs
+!systemjs.config.js
