--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "reflect-metadata": "^0.1.8",
-    "rxjs": "^5.0.0-beta.6",
+    "rxjs": "5.0.0-beta.6",
     "systemjs": "^0.19.36",
     "zone.js": "^0.6.12"
   },
