Issue #11: - Finishing the SwissPlayerListComponent. - Moving logic from SwissPlayerFormComponent to SwissPlayersComponent. - Changing SwissPlayerFormComponent to just emit events. - Adding `noUnused` flags to tsconfig.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,6 +8,8 @@
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
