--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@angular/compiler-cli": "^4.0.1",
     "@types/jasmine": "^2.5.38",
     "@types/node": "^7.0.4",
-    "codelyzer": "^2.1.1",
-    "jasmine-core": "2.5.2",
-    "jasmine-spec-reporter": "^3.2.0",
+    "codelyzer": "^3.0.1",
+    "jasmine-core": "^2.6.1",
+    "jasmine-spec-reporter": "^4.1.0",
     "karma": "^1.4.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-cli": "^1.0.1",
@@ -45,7 +45,7 @@
     "karma-remap-istanbul": "^0.6.0",
     "protractor": "^5.0.0",
     "ts-node": "^3.0.2",
-    "tslint": "^4.5.1",
+    "tslint": "^5.2.0",
     "typescript": "^2.0.3"
   }
 }
