--- a/package.json
+++ b/package.json
@@ -13,39 +13,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "@angular/router": "^4.0.1",
+    "@angular/animations": "^5.0.1",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.4.1",
+    "core-js": "^2.5.1",
     "jquery": "^3.1.1",
-    "rxjs": "^5.0.1",
+    "rxjs": "^5.5.2",
     "ts-helpers": "^1.1.1",
-    "zone.js": "^0.8.5"
+    "zone.js": "^0.8.18"
   },
   "devDependencies": {
-    "@angular/cli": "^1.0.0",
-    "@angular/compiler-cli": "^4.0.1",
-    "@types/jasmine": "^2.5.38",
-    "@types/node": "^7.0.4",
-    "codelyzer": "^3.0.1",
-    "jasmine-core": "^2.6.1",
-    "jasmine-spec-reporter": "^4.1.0",
-    "karma": "^1.4.0",
-    "karma-chrome-launcher": "^2.0.0",
+    "@angular/cli": "^1.5.0",
+    "@angular/compiler-cli": "^5.0.1",
+    "@types/jasmine": "^2.6.3",
+    "@types/node": "^8.0.50",
+    "codelyzer": "^4.0.1",
+    "jasmine-core": "^2.8.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
     "karma-jasmine": "^1.0.2",
     "karma-remap-istanbul": "^0.6.0",
-    "protractor": "^5.0.0",
-    "ts-node": "^3.0.2",
-    "tslint": "^5.2.0",
-    "typescript": "^2.0.3"
+    "protractor": "^5.2.0",
+    "ts-node": "^3.3.0",
+    "tslint": "^5.8.0",
+    "typescript": "~2.4.2"
   }
 }
