--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mirror-match",
-  "version": "0.0.0",
+  "version": "1.0.0-beta.1",
   "license": "MIT",
   "angular-cli": {},
   "scripts": {
