--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "core-js": "^2.5.1",
     "jquery": "^3.1.1",
     "rxjs": "^5.5.2",
-    "ts-helpers": "^1.1.1",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
     "@angular/cli": "^1.5.4",
     "@angular/compiler-cli": "^5.0.3",
     "@types/jasmine": "^2.8.2",
+    "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.53",
     "codelyzer": "^4.0.1",
     "jasmine-core": "^2.8.0",
@@ -41,8 +41,9 @@
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "^1.0.2",
-    "karma-remap-istanbul": "^0.6.0",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "^5.2.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
