--- a/package.json
+++ b/package.json
@@ -13,25 +13,25 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.0.3",
-    "@angular/common": "^5.0.3",
-    "@angular/compiler": "^5.0.3",
-    "@angular/core": "^5.0.3",
-    "@angular/forms": "^5.0.3",
-    "@angular/http": "^5.0.3",
-    "@angular/platform-browser": "^5.0.3",
-    "@angular/platform-browser-dynamic": "^5.0.3",
-    "@angular/platform-server": "^5.0.3",
-    "@angular/router": "^5.0.3",
+    "@angular/animations": "^6.0.4",
+    "@angular/common": "^6.0.4",
+    "@angular/compiler": "^6.0.4",
+    "@angular/core": "^6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "^6.0.4",
+    "@angular/platform-browser": "^6.0.4",
+    "@angular/platform-browser-dynamic": "^6.0.4",
+    "@angular/platform-server": "^6.0.4",
+    "@angular/router": "^6.0.4",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.1",
     "jquery": "^3.1.1",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.18"
+    "rxjs": "^6.2.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.4",
-    "@angular/compiler-cli": "^5.0.3",
+    "@angular/cli": "^6.0.8",
+    "@angular/compiler-cli": "^6.0.4",
     "@types/jasmine": "^2.8.2",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^8.0.53",
@@ -47,6 +47,7 @@
     "protractor": "^5.2.0",
     "ts-node": "^3.3.0",
     "tslint": "^5.8.0",
-    "typescript": "~2.4.2"
+    "typescript": "~2.7.2",
+    "@angular-devkit/build-angular": "~0.6.8"
   }
 }
