--- a/package.json
+++ b/package.json
@@ -24,30 +24,30 @@
     "@angular/platform-server": "^6.0.4",
     "@angular/router": "^6.0.4",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.5.1",
-    "jquery": "^3.1.1",
+    "core-js": "^2.5.7",
+    "jquery": "^3.3.1",
     "rxjs": "^6.2.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.8",
     "@angular/cli": "^6.0.8",
     "@angular/compiler-cli": "^6.0.4",
-    "@types/jasmine": "^2.8.2",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^8.0.53",
-    "codelyzer": "^4.0.1",
-    "jasmine-core": "^2.8.0",
+    "@types/node": "^8.10.19",
+    "codelyzer": "^4.3.0",
+    "jasmine-core": "^2.99.1",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^1.7.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "^1.0.2",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "^5.2.0",
+    "protractor": "^5.3.2",
     "ts-node": "^3.3.0",
-    "tslint": "^5.8.0",
-    "typescript": "~2.7.2",
-    "@angular-devkit/build-angular": "~0.6.8"
+    "tslint": "^5.10.0",
+    "typescript": "~2.7.2"
   }
 }
