--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@angular/compiler-cli": "^6.0.4",
     "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "^10.3.2",
+    "@types/node": "10.1.2",
     "codelyzer": "^4.3.0",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "^4.2.1",
