--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "tsConfig": "src/tsconfig.json",
             "main": "src/test.ts",
             "karmaConfig": "./karma.conf.js",
             "scripts": [
