#62: Commenting out a ton for now to slowly reintroduce things refactored.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -8,8 +8,8 @@
     "mapRoot": "./",
     "module": "es6",
     "moduleResolution": "node",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
     "target": "es5",
