--- a/package.json
+++ b/package.json
@@ -13,42 +13,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.1.4",
-    "@angular/common": "^6.1.4",
-    "@angular/compiler": "^6.1.4",
-    "@angular/core": "^6.1.4",
-    "@angular/forms": "^6.1.4",
-    "@angular/http": "^6.1.4",
-    "@angular/platform-browser": "^6.1.4",
-    "@angular/platform-browser-dynamic": "^6.1.4",
-    "@angular/platform-server": "^6.1.4",
-    "@angular/router": "^6.1.4",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.5.7",
+    "@angular/animations": "^7.1.4",
+    "@angular/common": "^7.1.4",
+    "@angular/compiler": "^7.1.4",
+    "@angular/core": "^7.1.4",
+    "@angular/forms": "^7.1.4",
+    "@angular/http": "^7.1.4",
+    "@angular/platform-browser": "^7.1.4",
+    "@angular/platform-browser-dynamic": "^7.1.4",
+    "@angular/platform-server": "^7.1.4",
+    "@angular/router": "^7.1.4",
+    "@ngrx/store": "^7.0.0",
+    "bootstrap": "^3.4.0",
+    "core-js": "^2.6.1",
     "jquery": "^3.3.1",
-    "rxjs": "^6.2.0",
+    "rxjs": "^6.3.3",
+    "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/cli": "^6.1.5",
-    "@angular/compiler-cli": "^6.1.4",
-    "@types/jasmine": "^2.8.8",
-    "@types/jasminewd2": "~2.0.2",
+    "@angular-devkit/build-angular": "~0.11.0",
+    "@angular/cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.1.4",
+    "@types/jasmine": "^2.8.14",
+    "@types/jasminewd2": "^2.0.6",
     "@types/node": "10.1.2",
-    "codelyzer": "^4.3.0",
-    "jasmine": "^3.1.0",
-    "jasmine-core": "^3.1.0",
+    "codelyzer": "^4.5.0",
+    "jasmine": "^3.3.1",
+    "jasmine-core": "^3.3.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.2",
+    "karma": "^3.1.4",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^1.0.1",
-    "karma-coverage-istanbul-reporter": "^2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.3.1",
-    "protractor": "^5.3.2",
+    "karma-jasmine-html-reporter": "^1.4.0",
+    "protractor": "^5.4.1",
     "ts-node": "^6.1.0",
-    "tslint": "^5.10.0",
-    "typescript": "~2.7.2"
+    "tslint": "^5.12.0",
+    "typescript": "~3.1.6"
   }
 }
