#68: A good start on converting to NGRX.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@angular/platform-browser-dynamic": "^7.1.4",
     "@angular/platform-server": "^7.1.4",
     "@angular/router": "^7.1.4",
+    "@ngrx/db": "^2.1.0",
+    "@ngrx/effects": "^7.0.0",
+    "@ngrx/entity": "^7.0.0",
     "@ngrx/store": "^7.0.0",
     "bootstrap": "^3.4.0",
     "core-js": "^2.6.1",
