--- a/package.json
+++ b/package.json
@@ -13,33 +13,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.1.4",
-    "@angular/common": "^7.1.4",
-    "@angular/compiler": "^7.1.4",
-    "@angular/core": "^7.1.4",
-    "@angular/forms": "^7.1.4",
-    "@angular/http": "^7.1.4",
-    "@angular/platform-browser": "^7.1.4",
-    "@angular/platform-browser-dynamic": "^7.1.4",
-    "@angular/platform-server": "^7.1.4",
-    "@angular/router": "^7.1.4",
-    "@ngrx/effects": "^7.0.0",
-    "@ngrx/entity": "^7.0.0",
-    "@ngrx/store": "^7.0.0",
+    "@angular/animations": "^7.2.3",
+    "@angular/common": "^7.2.3",
+    "@angular/compiler": "^7.2.3",
+    "@angular/core": "^7.2.3",
+    "@angular/forms": "^7.2.3",
+    "@angular/http": "^7.2.3",
+    "@angular/platform-browser": "^7.2.3",
+    "@angular/platform-browser-dynamic": "^7.2.3",
+    "@angular/platform-server": "^7.2.3",
+    "@angular/router": "^7.2.3",
+    "@ngrx/effects": "^7.2.0",
+    "@ngrx/entity": "^7.2.0",
+    "@ngrx/store": "^7.2.0",
     "bootstrap": "^3.4.0",
-    "core-js": "^2.6.1",
+    "core-js": "^2.6.3",
     "jquery": "^3.3.1",
-    "rxjs": "^6.3.3",
+    "rxjs": "^6.4.0",
     "tslib": "^1.9.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.1",
-    "@angular/cli": "^7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
-    "@types/jasmine": "^2.8.14",
+    "@angular-devkit/build-angular": "^0.12.4",
+    "@angular/cli": "^7.3.0",
+    "@angular/compiler-cli": "^7.2.3",
+    "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.6",
-    "@types/node": "10.1.2",
+    "@types/node": "^10.12.21",
     "codelyzer": "^4.5.0",
     "jasmine": "^3.3.1",
     "jasmine-core": "^3.3.0",
@@ -50,9 +50,9 @@
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "^5.4.1",
+    "protractor": "^5.4.2",
     "ts-node": "^6.1.0",
-    "tslint": "^5.12.0",
-    "typescript": "~3.1.6"
+    "tslint": "^5.12.1",
+    "typescript": ">=3.1.1 <3.3"
   }
 }
