--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ngrx/effects": "^7.4.0",
     "@ngrx/entity": "^7.4.0",
     "@ngrx/store": "^7.4.0",
+    "@ngrx/store-devtools": "^7.4.0",
     "bootstrap": "^3.4.1",
     "core-js": "^2.6.5",
     "jquery": "^3.4.1",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^0.13.9",
     "@angular/cli": "^7.3.9",
     "@angular/compiler-cli": "^7.2.15",
+    "@ngrx/schematics": "^7.4.0",
     "@types/jasmine": "^3.3.12",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^12.0.0",
