#73: Adding a bunch of work on tests for PlayersPageComponent, PairingsPageComponent and EventInfoComponent. - Some cleanup in angular.json - Updated some karma dependencies. - Creating SwissEffects for effects that touch multiple slices of the state.

--- a/angular.json
+++ b/angular.json
@@ -88,10 +88,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
-            ],
+            "tsConfig": "src/tsconfig.json",
             "exclude": [
               "**/node_modules/**"
             ]
@@ -115,7 +112,7 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "e2e/tsconfig.e2e.json"
+              "e2e/tsconfig.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -134,5 +131,8 @@
     "@schematics/angular:directive": {
       "prefix": "mm"
     }
+  },
+  "cli": {
+    "defaultCollection": "@ngrx/schematics"
   }
 }
