--- a/angular.json
+++ b/angular.json
@@ -100,7 +100,7 @@
       }
     },
     "mirror-match-e2e": {
-      "root": "",
+      "root": "e2e",
       "sourceRoot": "e2e",
       "projectType": "application",
       "architect": {
