--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@ngrx/store": "^8.5.0",
     "@ngrx/store-devtools": "^8.5.0",
     "bootstrap": "^3.4.1",
-    "core-js": "^2.6.9",
+    "core-js": "^2.6.10",
     "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.0.0-rc.0",
+    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -40,14 +40,14 @@
     "@angular/cli": "^8.3.18",
     "@angular/compiler-cli": "^8.2.13",
     "@ngrx/schematics": "^8.5.0",
-    "@types/jasmine": "^3.3.16",
-    "@types/jasminewd2": "^2.0.6",
-    "@types/node": "^12.6.9",
-    "codelyzer": "^5.1.0",
-    "jasmine": "^3.4.0",
-    "jasmine-core": "^3.4.0",
+    "@types/jasmine": "^3.4.6",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.12.7",
+    "codelyzer": "^5.2.0",
+    "jasmine": "^3.5.0",
+    "jasmine-core": "^3.5.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^4.2.0",
+    "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "^2.1.0",
@@ -55,7 +55,7 @@
     "karma-jasmine-html-reporter": "^1.4.2",
     "protractor": "^5.4.2",
     "ts-node": "^6.1.0",
-    "tslint": "^5.18.0",
+    "tslint": "^5.20.1",
     "typescript": "3.5.3"
   }
 }
