--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "core-js": "^2.6.10",
     "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
-    "rxjs-compat": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -46,6 +45,7 @@
     "codelyzer": "^5.2.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
+    "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "^4.2.1",
     "karma": "^4.4.1",
     "karma-chrome-launcher": "^2.2.0",
