--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,7 +12,8 @@
     "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
     "sourceMap": true,
-    "target": "es2015",
+    // TODO: Change `target` back to es2015 once the coverage/inheritance bug gets fixed
+    "target": "es5",
     "typeRoots": [
       "../node_modules/@types"
     ]
