--- a/package.json
+++ b/package.json
@@ -15,12 +15,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.13",
-    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.13",
     "@angular/compiler": "^8.2.13",
     "@angular/core": "^8.2.13",
     "@angular/forms": "^8.2.13",
-    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/platform-server": "^8.2.13",
@@ -29,8 +27,8 @@
     "@ngrx/entity": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
+    "bootstrap": "^3.4.1",
     "core-js": "^2.6.10",
-    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
