--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/platform-server": "^8.2.13",
     "@angular/router": "^8.2.13",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ngrx/effects": "^8.5.2",
     "@ngrx/entity": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
-    "bootstrap": "^3.4.1",
+    "bootstrap": "^4.4.1",
     "core-js": "^2.6.10",
-    "jquery": "^3.4.1",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
