--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ngrx/store-devtools": "^8.5.2",
     "bootstrap": "^4.4.1",
     "core-js": "^2.6.10",
+    "feather-icons": "^4.24.1",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -39,6 +40,7 @@
     "@angular/cli": "^8.3.18",
     "@angular/compiler-cli": "^8.2.13",
     "@ngrx/schematics": "^8.5.2",
+    "@types/feather-icons": "^4.7.0",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.14",
