--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "",
+    "baseUrl": ".",
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -11,6 +11,10 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
+    "paths": {
+      "@app/*": ["app/*"],
+      "@env/*": ["environments/*"]
+    },
     "sourceMap": true,
     // TODO: Change `target` back to es2015 once the coverage/inheritance bug gets fixed
     "target": "es5",
