feat: Another attempt at Material
Issue #69

--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/site.webmanifest"
             ],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "src/custom-theme.scss",
               "src/styles.css"
             ],
             "scripts": []
@@ -76,7 +76,6 @@
             "karmaConfig": "./karma.conf.js",
             "scripts": [],
             "styles": [
-              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
             "assets": [
