--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^8.2.13",
+    "@angular/cdk": "~8.2.3",
     "@angular/common": "^8.2.13",
     "@angular/compiler": "^8.2.13",
     "@angular/core": "^8.2.13",
     "@angular/forms": "^8.2.13",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "^8.2.13",
     "@angular/platform-browser-dynamic": "^8.2.13",
     "@angular/platform-server": "^8.2.13",
     "@angular/router": "^8.2.13",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@ngrx/effects": "^8.5.2",
     "@ngrx/entity": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
-    "bootstrap": "^4.4.1",
     "core-js": "^2.6.10",
-    "feather-icons": "^4.24.1",
+    "hammerjs": "^2.0.8",
     "rxjs": "^6.5.3",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
@@ -40,7 +40,6 @@
     "@angular/cli": "^8.3.20",
     "@angular/compiler-cli": "^8.2.13",
     "@ngrx/schematics": "^8.5.2",
-    "@types/feather-icons": "^4.7.0",
     "@types/jasmine": "^3.5.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.14",
