feat(root): Some cleanup.
- Renaming the new mixin to mm-footer and moving to a mixins folder.
- Adding mixins folder to build assets.
- Changing default component stylesheet to scss.

Issue #69

--- a/angular.json
+++ b/angular.json
@@ -17,6 +17,7 @@
             "tsConfig": "src/tsconfig.json",
             "assets": [
               "src/assets",
+              "src/mixins",
               "src/android-chrome-192x192.png",
               "src/android-chrome-512x512.png",
               "src/apple-touch-icon.png",
@@ -125,7 +126,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "mm",
-      "styleext": "css"
+      "styleext": "scss"
     },
     "@schematics/angular:directive": {
       "prefix": "mm"
