--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/router": "^8.2.13",
     "@ngrx/effects": "^8.5.2",
     "@ngrx/entity": "^8.5.2",
+    "@ngrx/router-store": "^8.5.2",
     "@ngrx/store": "^8.5.2",
     "@ngrx/store-devtools": "^8.5.2",
     "core-js": "^2.6.10",
