--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -77,7 +77,7 @@
             "karmaConfig": "./karma.conf.js",
             "scripts": [],
             "styles": [
-              "src/styles.css"
+              "src/styles.scss"
             ],
             "assets": [
               "src/assets",
