--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.5.1",
+    "prettier": "1.19.1",
     "protractor": "^5.4.2",
     "ts-node": "^8.6.2",
     "tslint": "^5.20.1",
