@angular/cli migration - workspace-version-9 Angular Workspace migration. Update an Angular CLI workspace to version 9.

--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -17,5 +17,11 @@
     "typeRoots": [
       "../node_modules/@types"
     ]
-  }
+  },
+  "files": [
+    "main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
