@angular/cli migration - schematic-options-9 Replace deprecated 'styleext' and 'spec' Angular schematic options.

--- a/angular.json
+++ b/angular.json
@@ -139,7 +139,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "mm",
-      "styleext": "css"
+      "style": "css"
     },
     "@schematics/angular:directive": {
       "prefix": "mm"
