--- a/angular.json
+++ b/angular.json
@@ -16,7 +16,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
               "src/android-chrome-192x192.png",
@@ -88,7 +88,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "tsConfig": "src/tsconfig.spec.json",
+            "tsConfig": "tsconfig.spec.json",
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
             "karmaConfig": "karma.conf.js",
