--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.5.3",
-    "prettier": "1.19.1",
+    "prettier": "^2.0.5",
     "protractor": "^7.0.0",
     "ts-node": "^8.8.2",
     "tslint": "^6.1.1",
