--- a/angular.json
+++ b/angular.json
@@ -132,7 +132,7 @@
   "schematics": {
     "@schematics/angular:component": {
       "prefix": "mm",
-      "styleext": "scss"
+      "style": "scss"
     },
     "@schematics/angular:directive": {
       "prefix": "mm"
