--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "^10.0.11",
     "@angular/compiler": "^10.0.11",
     "@angular/core": "^10.0.11",
+    "@angular/elements": "^10.0.5",
     "@angular/forms": "^10.0.11",
     "@angular/material": "^10.1.3",
     "@angular/platform-browser": "^10.0.11",
