--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ngrx/store": "^10.0.0",
     "@ngrx/store-devtools": "^10.0.0",
     "core-js": "^2.6.11",
+    "document-register-element": "^1.7.2",
     "rxjs": "^6.6.2",
     "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
