--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "e2e": "protractor",
     "lint": "tslint \"src/**/*.ts\" --project src/tsconfig.json --type-check && tslint \"e2e/**/*.ts\" --project e2e/tsconfig.json --type-check",
     "ng": "ng",
-    "postinstall": "ngcc",
+    "postinstall": "ngcc --tsconfig tsconfig.app.json",
     "pree2e": "webdriver-manager update --standalone false --gecko false",
     "start": "ng serve",
     "test": "ng test"
