--- a/angular.json
+++ b/angular.json
@@ -97,6 +97,9 @@
             "styles": [
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": ["src/sass"]
+            },
             "assets": [
               "src/assets",
               "src/favicon.ico"
