--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "@ngrx/store-devtools": "^10.0.0",
     "core-js": "^2.6.11",
     "rxjs": "^6.6.2",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
@@ -41,11 +41,11 @@
     "@angular/cli": "^10.0.7",
     "@angular/compiler-cli": "^10.0.11",
     "@ngrx/schematics": "^10.0.0",
-    "@types/jasmine": "^3.5.10",
+    "@types/jasmine": "^3.5.13",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.35",
+    "@types/node": "^12.12.54",
     "codelyzer": "^6.0.0",
-    "jasmine": "^3.5.0",
+    "jasmine": "^3.6.1",
     "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -58,7 +58,7 @@
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "3.9.5"
   }
 }
