--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.55",
     "codelyzer": "^6.0.0",
+    "eslint": "^7.9.0",
     "jasmine": "^3.6.1",
     "jasmine-core": "~3.5.0",
     "jasmine-marbles": "^0.6.0",
