feat: Various tweaks.
- Starting some style refactoring.
- Creating custom toolbar component to reduce reliance on Material.
- Removing some redundant input on PlayersList.

Issue #96

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.scss"
+              "src/sass/main.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["src/sass"]
