--- a/package.json
+++ b/package.json
@@ -15,18 +15,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.2",
+    "@angular/animations": "^11.2.8",
     "@angular/cdk": "~10.2.7",
-    "@angular/common": "^10.2.2",
-    "@angular/compiler": "^10.2.2",
-    "@angular/core": "^10.2.2",
-    "@angular/elements": "^10.2.2",
-    "@angular/forms": "^10.2.2",
+    "@angular/common": "^11.2.8",
+    "@angular/compiler": "^11.2.8",
+    "@angular/core": "^11.2.8",
+    "@angular/elements": "^11.2.8",
+    "@angular/forms": "^11.2.8",
     "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^10.2.2",
-    "@angular/platform-browser-dynamic": "^10.2.2",
-    "@angular/platform-server": "^10.2.2",
-    "@angular/router": "^10.2.2",
+    "@angular/platform-browser": "^11.2.8",
+    "@angular/platform-browser-dynamic": "^11.2.8",
+    "@angular/platform-server": "^11.2.8",
+    "@angular/router": "^11.2.8",
     "@ngrx/effects": "^10.0.1",
     "@ngrx/entity": "^10.0.1",
     "@ngrx/router-store": "^10.0.1",
@@ -35,32 +35,32 @@
     "core-js": "^2.6.11",
     "document-register-element": "^1.14.10",
     "rxjs": "^6.6.3",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1002.0",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.2",
+    "@angular-devkit/build-angular": "~0.1102.6",
+    "@angular/cli": "^11.2.6",
+    "@angular/compiler-cli": "^11.2.8",
     "@ngrx/schematics": "^10.0.1",
-    "@types/jasmine": "^3.5.14",
+    "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "^2.0.8",
     "@types/node": "^12.12.68",
-    "codelyzer": "^6.0.1",
+    "codelyzer": "^6.0.0",
     "eslint": "^7.11.0",
     "jasmine": "^3.6.2",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-marbles": "^0.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~6.3.2",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "^2.0.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "prettier": "^2.1.2",
     "protractor": "~7.0.0",
     "ts-node": "^8.8.2",
-    "typescript": "3.9.5"
+    "typescript": "4.1.5"
   }
 }
