style: Adding DSP and starting to work with material tokens.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
     "vsicons.presets.angular": true,
     "cSpell.words": [
         "ngrx"
-    ]
+    ],
+    "xd.globalEditor": true,
+    "xd.lastPackage": "/home/sten/workspace/mirror-match/src/dsp"
 }
