--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "core-js": "^2.6.11",
     "document-register-element": "^1.14.10",
     "rxjs": "^6.6.7",
+    "style-dictionary": "^3.0.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
