style: Moving tokens into new style dir.
- Removing DSP from project.
- Committing a bunch of WIP stuff from many months ago that was on my computer.

Issue #96

--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,10 @@
               "src/site.webmanifest"
             ],
             "styles": [
-              "src/sass/main.scss"
+              "src/styles/main.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": ["src/sass"]
+              "includePaths": ["src/sass", "src/styles"]
             },
             "scripts": []
           },
@@ -93,10 +93,10 @@
             "polyfills": "src/polyfills.ts",
             "scripts": [],
             "styles": [
-              "src/sass/main.scss"
+              "src/styles/main.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": ["src/sass"]
+              "includePaths": ["src/styles"]
             },
             "assets": [
               "src/assets",
