style: Fixing sass upgrade error breaking the tests.
Issue #96

--- a/angular.json
+++ b/angular.json
@@ -93,10 +93,11 @@
             "polyfills": "src/polyfills.ts",
             "scripts": [],
             "styles": [
+              "src/sass/main.scss",
               "src/styles/main.scss"
             ],
             "stylePreprocessorOptions": {
-              "includePaths": ["src/styles"]
+              "includePaths": ["src/styles", "src/sass"]
             },
             "assets": [
               "src/assets",
