--- a/package.json
+++ b/package.json
@@ -16,13 +16,11 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^13.3.11",
-    "@angular/cdk": "~13.3.8",
     "@angular/common": "^13.3.11",
     "@angular/compiler": "^13.3.11",
     "@angular/core": "^13.3.11",
     "@angular/elements": "^13.3.11",
     "@angular/forms": "^13.3.11",
-    "@angular/material": "^13.3.8",
     "@angular/platform-browser": "^13.3.11",
     "@angular/platform-browser-dynamic": "^13.3.11",
     "@angular/platform-server": "^13.3.11",
@@ -34,6 +32,7 @@
     "@ngrx/store-devtools": "^13.0.1",
     "document-register-element": "^1.14.10",
     "rxjs": "^6.6.7",
+    "style-dictionary": "^3.7.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
