feat(shared): Changing styles.
- Doing tokens manually. The generated ones have too many issues.

Issue #96

--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,7 @@
               "src/favicon.ico",
               "src/site.webmanifest"
             ],
-            "styles": [
-              "src/styles/dsp/dist/styledictionary/css/variables.css",
-              "src/styles/main.scss"
-            ],
+            "styles": ["src/styles/main.scss"],
             "stylePreprocessorOptions": {
               "includePaths": []
             },
