@angular/cli migration - workspace-version-9 Angular Workspace migration. Update an Angular CLI workspace to version 9.

--- a/package.json
+++ b/package.json
@@ -31,18 +31,18 @@
     "core-js": "^2.6.11",
     "jquery": "^3.5.0",
     "rxjs": "^6.5.5",
-    "tslib": "^1.11.1",
-    "zone.js": "~0.10.3"
+    "tslib": "^1.10.0",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.15",
+    "@angular-devkit/build-angular": "~0.901.13",
     "@angular/cli": "^9.1.15",
     "@angular/compiler-cli": "^9.1.13",
     "@ngrx/schematics": "^8.6.0",
     "@types/jasmine": "^3.5.10",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.35",
-    "codelyzer": "^5.2.2",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
     "jasmine-marbles": "^0.6.0",
