--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,5 +14,11 @@
     "sourceMap": true,
     "target": "es2015",
     "typeRoots": ["../node_modules/@types"]
-  }
+  },
+  "files": [
+    "main.ts"
+  ],
+  "include": [
+    "src/**/*.d.ts"
+  ]
 }
