--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -14,7 +14,7 @@
     "target": "es2015",
     "typeRoots": ["../node_modules/@types"]
   },
-  "files": ["main.ts"],
+  "files": ["main.ts", "polyfills.ts"],
   "include": ["src/**/*.d.ts"],
   "angularCompilerOptions": {
     "strictTemplates": true
