--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,11 @@
 {
+  "compileOnSave": false,
   "compilerOptions": {
-    "baseUrl": "",
+    "baseUrl": "./",
     "declaration": false,
+    "downlevelIteration": true,
     "experimentalDecorators": true,
+    "importHelpers": true,
     "lib": ["es6", "dom"],
     "mapRoot": "./",
     "module": "es2020",
@@ -10,13 +13,16 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
+    "paths": {
+      "app/*": ["src/app/*"]
+    },
     "sourceMap": true,
     "target": "es2015",
-    "typeRoots": ["../node_modules/@types"]
+    "typeRoots": ["node_modules/@types"]
   },
-  "files": ["main.ts", "polyfills.ts"],
-  "include": ["src/**/*.d.ts"],
   "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
+    "strictInjectionParameters": true,
     "strictTemplates": true
   }
 }
