@angular/cli migration - replace-default-collection-option
Replace 'defaultCollection' option in workspace configuration with 'schematicCollections'.

--- a/angular.json
+++ b/angular.json
@@ -126,6 +126,8 @@
     }
   },
   "cli": {
-    "defaultCollection": "@ngrx/schematics"
+    "schematicCollections": [
+      "@ngrx/schematics"
+    ]
   }
 }
