@angular/cli migration - update-typescript-target
Update TypeScript compiler `target` and set `useDefineForClassFields`. These changes are for IDE purposes as TypeScript compiler options `target` and `useDefineForClassFields` are set to `ES2022` and `false` respectively by the Angular CLI. To control ECMA version and features use the Browerslist configuration.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "downlevelIteration": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "lib": ["es6", "dom"],
+    "lib": [
+      "es6",
+      "dom"
+    ],
     "mapRoot": "./",
     "module": "es2020",
     "moduleResolution": "node",
@@ -14,11 +17,16 @@
     "noUnusedParameters": true,
     "outDir": "../dist/out-tsc",
     "paths": {
-      "app/*": ["src/app/*"]
+      "app/*": [
+        "src/app/*"
+      ]
     },
     "sourceMap": true,
-    "target": "es2020",
-    "typeRoots": ["node_modules/@types"]
+    "target": "ES2022",
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
