--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "@ngrx/router-store": "^15.2.1",
     "@ngrx/store": "^15.2.1",
     "@ngrx/store-devtools": "^15.2.1",
-    "document-register-element": "^1.14.10",
     "rxjs": "^7.6.0",
     "style-dictionary": "^3.7.0",
     "tslib": "^2.0.0",
@@ -38,13 +37,19 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.4",
+    "@angular-eslint/builder": "15.2.1",
+    "@angular-eslint/eslint-plugin": "15.2.1",
+    "@angular-eslint/eslint-plugin-template": "15.2.1",
+    "@angular-eslint/schematics": "15.2.1",
+    "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "^15.1.4",
     "@angular/compiler-cli": "^15.1.3",
     "@ngrx/schematics": "^15.2.1",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.13",
-    "codelyzer": "^6.0.2",
-    "eslint": "^8.3.0",
+    "@typescript-eslint/eslint-plugin": "5.48.2",
+    "@typescript-eslint/parser": "5.48.2",
+    "eslint": "^8.33.0",
     "jasmine-core": "^4.5.0",
     "karma": "~6.4.1",
     "karma-chrome-launcher": "~3.1.0",
